syntax = "proto3";

option csharp_namespace = "University.User.Grpc";


service TokenServiceAutoraizeGrpc{
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string token = 1;
}

message LoginResponse {
    bool isAthenticated = 1;
}



